more informative URI loader exceptions