@@ -2,6 +2,8 @@ package net.caustic.uri;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.MalformedURLException;
+import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -22,29 +24,23 @@ import net.caustic.uri.UriResolver;
  */
 public class JavaNetURILoader implements URILoader {
 	
-	//private final HttpBrowser browser;
 	private final FileLoader fileLoader;
-
-	/**
-	 * Create a {@link JavaNetURILoader} using a specific browser.
-	 * @param browser The {@link HttpBrowser} to load remote URIs with.
-	 * @param fileLoader The {@link FileLoader} to load local URIs with.
-	 */
-	public JavaNetURILoader(FileLoader fileLoader) {
-		//this.browser = browser;
-		this.fileLoader = fileLoader;
+	
+	private String loadLocal(URI uri) throws URILoaderException {
+		String path = uri.getSchemeSpecificPart();
+		try {
+			return fileLoader.load(path);
+		} catch(IOException e) {
+			throw URILoaderException.fromLocal(e, path + " could not be loaded locally.");
+		}
 	}
 	
-	public String load(String uriStr) throws URILoaderException, InterruptedException {
+	private String loadRemote(String url) throws URILoaderException {
 		try {
-			URI uri = new URI(uriStr);
-			if(uri.getScheme() == null) {
-				return fileLoader.load(uri.getSchemeSpecificPart());
-			} else if(uri.getScheme().equalsIgnoreCase(UriResolver.FILE_SCHEME)) {
-				return fileLoader.load(uri.getSchemeSpecificPart());
-			} else {
-				URLConnection conn = new URL(uriStr).openConnection();
-				conn.addRequestProperty("request", "application/json");
+			URLConnection conn = new URL(url).openConnection();
+			conn.addRequestProperty("Accept", "application/json,text/javascript");
+			conn.connect();			
+			try {
 				InputStreamReader stream = new InputStreamReader(conn.getInputStream());
 				StringBuffer content = new StringBuffer();
 				char[] buf = new char[512];
@@ -54,15 +50,40 @@ public class JavaNetURILoader implements URILoader {
 				}
 				
 				return content.toString();
+			} catch(IOException e) {
+				throw URILoaderException.fromRemote(e, url + " could not be loaded: " + conn.getHeaderField(0) + ".");
+			}
+		} catch(SocketTimeoutException e) {
+			throw URILoaderException.fromRemote(e, url + " timed out.");
+		} catch(MalformedURLException e) {
+			throw URILoaderException.fromRemote(e, url + " was malformed.");
+		} catch(IOException e) {
+			throw URILoaderException.fromRemote(e, url + " could not be loaded.");
+		}
+	}
+
+	/**
+	 * Create a {@link JavaNetURILoader} using a specific browser.
+	 * @param browser The {@link HttpBrowser} to load remote URIs with.
+	 * @param fileLoader The {@link FileLoader} to load local URIs with.
+	 */
+	public JavaNetURILoader(FileLoader fileLoader) {
+		this.fileLoader = fileLoader;
+	}
+	
+	public String load(String uriStr) throws URILoaderException, InterruptedException {
+		try {
+			URI uri = new URI(uriStr);
+			if(uri.getScheme() == null) {
+				return loadLocal(uri);
+			} else if(uri.getScheme().equalsIgnoreCase(UriResolver.FILE_SCHEME)) {
+				return loadLocal(uri);
+			} else {
+				return loadRemote(uriStr);
 				//return browser.get(uriStr, new Hashtable<String, String>(), new Pattern[] {});
 			}
-		} catch (IOException e) {
-			// TODO this is thrown from remote as well.
-			throw URILoaderException.fromLocal(e);
 		} catch (URISyntaxException e) {
 			throw new MalformedUriException(e);
-		} /*catch (HttpException e) {
-			throw URILoaderException.fromRemote(e);
-		}*/
+		}
 	}
 }
